crates/macros/src/snapshots/rstest_insta_macros__codegen__tests__context_binding_when_fn_contains_context_arg.snap
---
source: crates/macros/src/codegen.rs
expression: formatted
---
fn my_test(#[context] my_context: Context) {
    println!("Hello, World!")
}
