crates/macros/src/snapshots/rstest_insta_macros__codegen__tests__context_binding_when_fn_contains_no_context_arg.snap
---
source: crates/macros/src/codegen.rs
expression: formatted
---
fn my_test(#[context] __rstest_insta__ctx: Context) {
    println!("Hello, World!")
}
