crates/macros/src/snapshots/rstest_insta_macros__codegen__tests__expand_attribute_when_fn_contains_no_attributes.snap
---
source: crates/macros/src/codegen.rs
expression: "test_helpers::pretty(expanded)"
---
#[::rstest::rstest]
fn my_test() {
    println!("Hello, World!")
}
