crates/macros/src/snapshots/rstest_insta_macros__codegen__tests__expand_when_fn_contains_no_context_arg.snap
---
source: crates/macros/src/codegen.rs
expression: "test_helpers::pretty(expanded)"
---
#[::rstest::rstest]
fn my_test(#[context] __rstest_insta__ctx: Context, a: usize) {
    let __rstest_insta__suffix = __rstest_insta__ctx
        .description
        .map(|s| s.to_string())
        .unwrap_or(__rstest_insta__ctx.case.unwrap_or(0).to_string());
    ::insta::with_settings!(
        { snapshot_suffix => __rstest_insta__suffix }, { { println!("Hello, World!") } }
    )
}
